examples/neg/issue1165b.effekt
module issue1165b

effect exc(): Nothing
def foo() = try {
  e
} with e: exc { <> }